@startuml diagram
entity "Doctors" {
  *DoctorID : INT <<PK>>
  --
  FullName : VARCHAR(100)
  Specialty : VARCHAR(100)
  Phone : VARCHAR(15)
  Email : VARCHAR(100)
}

entity "Patients" {
  *PatientID : INT <<PK>>
  --
  FullName : VARCHAR(100)
  DOB : DATE
  Gender : CHAR(1)
  Phone : VARCHAR(15)
  Email : VARCHAR(100)
  Address : VARCHAR(255)
}

entity "Appointments" {
  *AppointmentID : INT <<PK>>
  --
  DoctorID : INT <<FK>>
  PatientID : INT <<FK>>
  AppointmentDate : DATETIME
  Reason : VARCHAR(255)
  Status : VARCHAR(50)
}

entity "MedicalRecords" {
  *RecordID : INT <<PK>>
  --
  PatientID : INT <<FK>>
  DoctorID : INT <<FK>>
  Date : DATETIME
  Diagnosis : VARCHAR(255)
  Treatment : TEXT
  Notes : TEXT
}

entity "Billing" {
  *BillID : INT <<PK>>
  --
  PatientID : INT <<FK>>
  AppointmentID : INT <<FK>>
  Amount : DECIMAL(10,2)
  BillingDate : DATETIME
  Status : VARCHAR(50)
}

entity "Prescriptions" {
  *PrescriptionID : INT <<PK>>
  --
  RecordID : INT <<FK>>
  Medication : VARCHAR(100)
  Dosage : VARCHAR(50)
  Frequency : VARCHAR(50)
  Notes : TEXT
}

entity "InsuranceDetails" {
  *InsuranceID : INT <<PK>>
  --
  PatientID : INT <<FK>>
  Provider : VARCHAR(100)
  PolicyNumber : VARCHAR(50)
  ExpirationDate : DATE
}

entity "AppointmentFeedback" {
  *FeedbackID : INT <<PK>>
  --
  AppointmentID : INT <<FK>>
  Rating : INT
  Comments : TEXT
  FeedbackDate : DATETIME
}

"Doctors" ||--o{ "Appointments" : "DoctorID"
"Patients" ||--o{ "Appointments" : "PatientID"
"Patients" ||--o{ "MedicalRecords" : "PatientID"
"Doctors" ||--o{ "MedicalRecords" : "DoctorID"
"Patients" ||--o{ "Billing" : "PatientID"
"Appointments" ||--o{ "Billing" : "AppointmentID"
"MedicalRecords" ||--o{ "Prescriptions" : "RecordID"
"Patients" ||--o{ "InsuranceDetails" : "PatientID"
"Appointments" ||--o{ "AppointmentFeedback" : "AppointmentID"
@enduml
